# agent-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  clippy.toml  test_lm_studio.rs
.cargo/: config.toml
.claude/: settings.json
.claude/commands/: build.md  check-deps.md  coverage.md  lint.md  test.md  update-deps.md
crates/agent-cli/: Cargo.toml
crates/agent-cli/src/: main.rs
crates/agent-core/: Cargo.toml  README.md
crates/agent-core/src/: agent.rs  context.rs  error.rs  lib.rs
crates/agent-llm/: Cargo.toml  README.md
crates/agent-llm/examples/: openai_custom_config.rs  test_lm_studio.rs
crates/agent-llm/src/: completion.rs  error.rs  lib.rs  messages.rs  provider.rs  tools.rs
crates/agent-llm/src/providers/: anthropic.rs  mod.rs  openai.rs
crates/agent-mcp/: Cargo.toml  README.md
crates/agent-mcp/examples/: .mcp.json.example  basic_usage.rs  resource_example.rs  retry_example.rs
crates/agent-mcp/src/: config.rs  context.rs  discovery.rs  error.rs  lib.rs  resource.rs  retry.rs  schema.rs  tool.rs
crates/agent-mcp/src/client/: http.rs  manager.rs  mod.rs  stdio.rs
crates/agent-prompt/: Cargo.toml  README.md
crates/agent-prompt/src/: builder.rs  error.rs  jinja.rs  language.rs  lib.rs  loader.rs  registry.rs  template.rs
crates/agent-runtime/: Cargo.toml  README.md
crates/agent-runtime/examples/: mcp_integration.rs
crates/agent-runtime/src/: executor.rs  lib.rs  runtime.rs
crates/agent-runtime/src/agents/: delegating.rs  mod.rs  simple.rs  tool.rs
crates/agent-stock/: Cargo.toml  DESIGN.md  IMPLEMENTATION.md  README.md
crates/agent-stock/examples/: basic_analysis.rs  openai_local_analysis.rs
crates/agent-stock/src/: cache.rs  config.rs  error.rs  lib.rs  router.rs
crates/agent-stock/src/agents/: data_fetcher.rs  earnings_analyzer.rs  fundamental_analyzer.rs  macro_analyzer.rs  mod.rs  news_analyzer.rs  stock_analysis.rs  technical_analyzer.rs
crates/agent-stock/src/api/: alpha_vantage.rs  fred.rs  mod.rs  news_apis.rs  sec_edgar.rs  yahoo.rs
crates/agent-stock/src/bot/: commands.rs  conversation.rs  mod.rs
crates/agent-stock/src/engine/: analysis_engine.rs  context.rs  mod.rs  result.rs
crates/agent-stock/src/interface/: formatter.rs  interface.rs  message.rs  mod.rs  session.rs
crates/agent-stock/src/prompts/: mod.rs  system.rs  user.rs
crates/agent-stock/src/tools/: chart.rs  earnings.rs  fundamental.rs  geopolitical.rs  macro_economic.rs  mod.rs  news.rs  sector.rs  stock_data.rs  technical.rs
crates/agent-tools/: Cargo.toml  README.md
crates/agent-tools/src/: lib.rs  registry.rs  tool.rs
crates/agent-utils/: Cargo.toml  README.md
crates/agent-utils/src/: config.rs  lib.rs  logging.rs
crates/agent-workflow/: Cargo.toml  README.md
crates/agent-workflow/src/: executor.rs  lib.rs  workflow.rs  workflow_agent.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: MCP_INTEGRATION_SUMMARY.md  PHASE_5_RESOURCE_SYSTEM.md  mcp-implementation-summary.md  mcp-integration-guide.md  mcp-servers.md
