[package]
name = "agent-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
authors.workspace = true
license.workspace = true
description = "Command-line interface for agent-rs"
repository.workspace = true
keywords = ["agent", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "agent-cli"
path = "src/main.rs"

[dependencies]
# From workspace
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
agent-core = { workspace = true }
agent-workflow = { workspace = true }
agent-utils = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
