[package]
name = "agent-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
description = "Core abstractions and runtime for agent-rs"
repository = "https://github.com/yourusername/agent-rs"
keywords = ["agent", "llm", "ai"]
categories = ["api-bindings"]

[dependencies]
# From workspace
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
agent-utils = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
