[package]
name = "agent-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core abstractions for building LLM-powered agents - Agent trait, Context, and Error types"
keywords = ["agent", "llm", "ai", "async"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"

[dependencies]
# From workspace
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
agent-utils = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }

[lints]
workspace = true
