[package]
name = "agent-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "LLM provider abstraction layer for agent-rs - supports Anthropic, OpenAI, and Ollama"
keywords = ["agent", "llm", "anthropic", "openai"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"

[features]
default = []
anthropic = ["reqwest"]
openai = ["reqwest"]
ollama = ["reqwest"]

[dependencies]
# From workspace
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
agent-core = { workspace = true }
agent-utils = { workspace = true }

# Optional dependencies for providers
reqwest = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }

[lints]
workspace = true
