[package]
name = "agent-mcp"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Model Context Protocol (MCP) integration for agent-rs"
repository = "https://github.com/yourusername/agent-rs"

[dependencies]
# Core dependencies
agent-core = { workspace = true }
agent-tools = { workspace = true }

# MCP SDK
rust-mcp-sdk = { version = "0.2", features = ["server", "client"] }
rust-mcp-schema = "0.2"

# Async runtime
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# HTTP client
reqwest = { workspace = true, features = ["json"] }

# Utilities
url = { workspace = true }
regex = "1.11"
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
tempfile = "3.14"

[features]
default = ["stdio", "http"]
stdio = []
http = []
