[package]
name = "agent-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Model Context Protocol (MCP) integration for agent-rs - connect to MCP servers"
keywords = ["agent", "mcp", "protocol", "tools"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"

[dependencies]
# Core dependencies
agent-core = { workspace = true }
agent-tools = { workspace = true }

# MCP SDK
rust-mcp-sdk = { workspace = true, features = ["server", "client"] }
rust-mcp-schema = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# HTTP client
reqwest = { workspace = true, features = ["json"] }

# Utilities
url = { workspace = true }
regex = "1.11"
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
tempfile = "3.14"

[features]
default = ["stdio", "http"]
stdio = []
http = []

[lints]
workspace = true
