[package]
name = "agent-prompt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Prompt template management for agent-rs - Jinja2 templates with multi-language support"
keywords = ["agent", "prompt", "template", "jinja"]
categories = ["text-processing", "template-engine"]
readme = "README.md"

[dependencies]
# Template engine
minijinja = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Optional: Integration with agent-core
agent-core = { workspace = true, optional = true }

# Optional: File loading
tokio = { workspace = true, optional = true }

[features]
default = []
core-integration = ["agent-core"]
file-loader = ["tokio"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
tempfile = "3"

[lints]
workspace = true
