[package]
name = "agent-runtime"
edition.workspace = true
version.workspace = true

[dependencies]
agent-core.workspace = true
agent-llm = { workspace = true, features = ["anthropic"] }
agent-tools.workspace = true
agent-mcp.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
