[package]
name = "agent-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Agent runtime for agent-rs - executor, dependency injection, and agent lifecycle management"
keywords = ["agent", "runtime", "executor", "async"]
categories = ["asynchronous", "development-tools"]
readme = "README.md"

[dependencies]
agent-core.workspace = true
agent-llm = { workspace = true, features = ["anthropic"] }
agent-tools.workspace = true
agent-mcp.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true

[lints]
workspace = true
