[package]
name = "agent-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Tool framework for agent-rs - define and execute tools for LLM agents"
keywords = ["agent", "tools", "functions", "llm"]
categories = ["development-tools", "asynchronous"]
readme = "README.md"

[dependencies]
# From workspace
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
agent-core = { workspace = true }
agent-utils = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }

[lints]
workspace = true
