[package]
name = "agent-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared utilities for agent-rs - logging, configuration, and common helpers"
keywords = ["agent", "utilities", "logging", "config"]
categories = ["development-tools"]
readme = "README.md"

[dependencies]
# From workspace
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true
