[package]
name = "agent-workflow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Multi-agent orchestration for agent-rs - workflows, pipelines, and agent coordination"
keywords = ["agent", "workflow", "orchestration", "multi-agent"]
categories = ["asynchronous", "development-tools"]
readme = "README.md"

[dependencies]
# From workspace
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
agent-core = { workspace = true }
agent-runtime = { workspace = true }
agent-utils = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }

[lints]
workspace = true
